--- a/index.html
+++ b/index.html
@@ -87,7 +87,112 @@
 	</header>
 
 
-	
+	<section id="interesting" class="interesting">
+		<div class="container"> 
+
+			<!--заголовок -->
+			<div class="row">
+				<div class="col-lg-12">
+				<div class="title">
+					<h2 class="title_main"> Характеристики </h2>
+
+					<p class="title_text"> В этом разделе мы расскажем вам, основные характеристики даного сайта-визитки </p>
+				</div>
+
+
+			</div>
+			</div>
+
+			<!--Текст -->
+
+			<div class="row">
+			<div class="col-lg-4">
+                    <div class="feature d-flex">
+                        <i class="fa fa-tablet feature__icon"></i>
+                        <div class="feature__block">
+                            <h3 class="feature__title">
+                                Адаптивность
+                            </h3>
+                            <p class="feature__text">
+                                Сайт подходит под любое устройство и расширение экрана. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="feature d-flex">
+                        <i class="fa fa-lemon-o feature__icon"></i>
+                        <div class="feature__block">
+                            <h3 class="feature__title">
+                                Все элеметы в PSD
+                            </h3>
+                            <p class="feature__text">
+                               Удобный для верстки сайт. Все элементы есть в PSD формате. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="feature d-flex">
+                        <i class="fa fa-folder-o feature__icon"></i>
+                        <div class="feature__block">
+                            <h3 class="feature__title">
+                                Потрясающие иконки
+                            </h3>
+                            <p class="feature__text">
+                                В приложени к файлу можно найти все необходимые иконки. 
+                            </p>
+                        </div>
+                    </div>
+
+
+                </div>
+<div class="col-lg-4">
+                    <div class="feature d-flex">
+                        <i class="fa fa-code feature__icon"></i>
+                        <div class="feature__block">
+                            <h3 class="feature__title">
+                                HTML & CSS
+                            </h3>
+                            <p class="feature__text">
+                                Сайт легко сверстать с помощью HTML и CSS. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="feature d-flex">
+                        <i class="fa fa-envelope-o  feature__icon"></i>
+                        <div class="feature__block">
+                            <h3 class="feature__title">
+                               Обратная связь
+                            </h3>
+                            <p class="feature__text">
+                               Сайт имеет раздел с обртаной связью. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="feature d-flex">
+                        <i class="fa fa-bookmark-o feature__icon"></i>
+                        <div class="feature__block">
+                            <h3 class="feature__title">
+                                Интересно верстать
+                            </h3>
+                            <p class="feature__text">
+                                Сайт имеет элементы, которые будет интересно верстать. 
+                            </p>
+                        </div>
+                    </div>
+            </div>
+
+    </section>
+
 
 	<section id="feedback" class="feedback">
 		
